...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzT-lo-rus">
                                <rect key="frame" x="154.5" y="165.5" width="66" height="34"/>
                                <constraints>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oWF-kZ-Lds">
                                <rect key="frame" x="83" y="228.5" width="209" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="tfUsername"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="209" id="XOm-e8-66W"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7H3-Nd-4fY">
                                <rect key="frame" x="83" y="287.5" width="209" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="tfPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="5xT-k4-c1d"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TpL-36-bGf">
                                <rect key="frame" x="117.5" y="341.5" width="140" height="60"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogin"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="140" id="8Vl-9f-5Az"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Cd-Xy-MjS">
                                <rect key="frame" x="152.5" y="414.5" width="70" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnSignUp"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="NTe-5v-KXk"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dn5-mQ-Ipq">
                                <rect key="frame" x="140.5" y="162.5" width="94" height="30"/>
                                <constraints>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pon-Bs-ACG">
                                <rect key="frame" x="83" y="341.5" width="209" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="tfConfirm"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="PaR-o3-abv"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKC-dK-PRU">
                                <rect key="frame" x="16" y="10" width="100" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogout"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="cq2-r5-OHi"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SegmentUserApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDg-rO-SBG">
                                <rect key="frame" x="30" y="5" width="315" height="130"/>
                                <constraints>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addCell" id="5FA-Py-gQL" customClass="CustomCell" customModule="SwiftSegmentUserApp" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="190" width="375" height="45"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="追加key" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rVb-hK-fkS">
                                                    <rect key="frame" x="5" y="5" width="112.5" height="40"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="tfKey"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="40" id="vrK-TC-0tX"/>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="追加value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mrG-wb-5c9">
                                                    <rect key="frame" x="122.5" y="5" width="247.5" height="40"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="tfValue"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="40" id="MhS-Iv-Sfo"/>
...
                                                    <rect key="frame" x="137.5" y="65" width="100" height="50"/>
